# glniman

./: .gitignore  CMakeLists.txt  README.org
examples/: CMakeLists.txt  clock.cpp
include/gl/: gl.h
include/gl/extensions/simple-drawer/: drawing-manager.h  pixel-drawing-manager.h  simple-drawing-renderer.h
include/gl/math/: general.h  rect.h  vec.h
include/gl/ui/: widget.h
src/extensions/simple-drawer/: drawing-manager.cpp
src/math/shapes/: circle.cpp
src/wrappers/setup/: opengl-setup.cpp
